# seven-guis-reflex

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  flake.nix  seven-guis.cabal
apps/: CRUD.hs  Counter.hs  FlightBooker.hs  Main.hs  TemperatureConverter.hs  Timer.hs  Widget.hs
apps/Cards/: Card.hs  Place.hs
apps/Cards/UI/: Back.hs  Card.hs  Pile.hs
apps/RB/UI/: Dom.hs
apps/Seven/: Attributes.hs  CRUD.hs  CircleDrawer.hs  Counter.hs  Dialog.hs  Element.hs  Event.hs  FlightBooker.hs  History.hs  PushMap.hs  SVG.hs  TemperatureConverter.hs  Timer.hs  Widget.hs
apps/UI/: Attributes.hs  Class.hs  Color.hs  Css.hs  Dialog.hs  Drag.hs  DragAndDrop.hs  Drop.hs  Element.hs  Email.hs  Event.hs  History.hs  Html.hs  Id.hs  IsElement.hs  Main.hs  Modal.hs  Password.hs  Point.hs  PushMap.hs  SVG.hs  Style.hs  Svg.hs  Units.hs  Url.hs  Widget.hs
apps/UI/Attributes/: Attribute.hs  AttributeSet.hs
apps/UI/Attributes/AttributeSet/: Internal.hs  Reflex.hs
apps/UI/Css/: Animations.hs  Parse.hs  Rules.hs  Transforms.hs  Values.hs
apps/UI/Element/: IsElement.hs
apps/UI/Html/: Attributes.hs  Input.hs  Select.hs
apps/UI/Html/Select/: Internal.hs
apps/UI/SVG/: Attributes.hs  Haskell.hs  Path.hs
apps/UI/Svg/: Attributes.hs  Haskell.hs  Path.hs
apps/UI/Type/: List.hs
css/: card-demo.css  tasks.css  ui-demo.css  ui.css
notes/: attributes.org
