cabal-version: 2.4
name:          seven-guis
version:       0.1.0.0
synopsis:
  An implementation of the 'Seven GUIs' benchmark using reflex-frp.

author:        Tikhon Jelvis <tikhon@jelv.is>
maintainer:    Tikhon Jelvis <tikhon@jelv.is>
copyright:     ©2021 Tikhon Jelvis
data-files:    css/tasks.css

executable guis
  hs-source-dirs:   apps
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-unused-do-bind -Wno-type-defaults
  main-is:          Main.hs
  other-modules:
    Cards.Card
    Cards.Place
    Cards.UI.Card
    Cards.UI.Pile
    Seven.CircleDrawer
    Seven.Counter
    Seven.CRUD
    Seven.FlightBooker
    Seven.TemperatureConverter
    Seven.Timer
    UI.Attributes
    UI.Color
    UI.Dialog
    UI.Drag
    UI.Drop
    UI.Element
    UI.Event
    UI.History
    UI.IsElement
    UI.Main
    UI.Point
    UI.PushMap
    UI.Style
    UI.SVG
    UI.SVG.Haskell
    UI.SVG.Path
    UI.Widget

  build-depends:
    , base
    , bytestring
    , colour
    , containers
    , data-default-class
    , directory
    , file-embed
    , ghcjs-dom
    , hashable
    , jsaddle
    , jsaddle-webkit2gtk
    , lens
    , modern-uri
    , mtl
    , reflex
    , reflex-dom
    , reflex-dom-core
    , text
    , text-display
    , time
    , transformers
    , unordered-containers
    , vector
    , vector-instances
    , witherable
