cabal-version: 2.4
name:          seven-guis
version:       0.1.0.0
synopsis:
  An implementation of the 'Seven GUIs' benchmark using reflex-frp.

author:        Tikhon Jelvis <tikhon@jelv.is>
maintainer:    Tikhon Jelvis <tikhon@jelv.is>
copyright:     ©2021 Tikhon Jelvis
data-files:    css/tasks.css

executable guis
  hs-source-dirs:     apps
  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-unused-do-bind -Wno-type-defaults
  main-is:            Main.hs

  -- most of these would be enabled by GHC2021
  default-extensions:
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MonadComprehensions
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLists
    OverloadedStrings
    PartialTypeSignatures
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    ViewPatterns

  other-modules:
    Cards.Card
    Cards.Place
    Cards.UI.Card
    Cards.UI.Pile
    Seven.CircleDrawer
    Seven.Counter
    Seven.CRUD
    Seven.FlightBooker
    Seven.TemperatureConverter
    Seven.Timer
    UI.Attributes
    UI.Attributes.Attribute
    UI.Attributes.AttributeSet
    UI.Attributes.AttributeSet.Internal
    UI.Attributes.AttributeSet.Reflex
    UI.Class
    UI.Color
    UI.Css
    UI.Css.Animations
    UI.Css.Rules
    UI.Css.Transforms
    UI.Css.Values
    UI.Drag
    UI.Drop
    UI.Element
    UI.Element.IsElement
    UI.Email
    UI.Event
    UI.History
    UI.Html
    UI.Html.Attributes
    UI.Html.Input
    UI.Html.Select
    UI.Html.Select.Internal
    UI.Id
    UI.Main
    UI.Modal
    UI.Password
    UI.PushMap
    UI.SVG
    UI.SVG.Attributes
    UI.SVG.Haskell
    UI.SVG.Path
    UI.Type.List
    UI.Units
    UI.Url
    UI.Widget

  build-depends:
    , base
    , bytestring
    , colour
    , containers
    , data-default-class
    , dependent-map
    , directory
    , email-validate
    , file-embed
    , ghcjs-dom
    , hashable
    , jsaddle
    , jsaddle-webkit2gtk
    , lens
    , linear
    , modern-uri
    , mtl
    , reflex
    , reflex-dom
    , reflex-dom-core
    , some
    , text
    , text-display
    , time
    , transformers
    , unordered-containers
    , vector
    , vector-instances
    , witherable
